[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AI-Agent-Core-Engine"
version = "0.0.1"
description = "AI Agent Core Engine"
authors = [
    {name = "IdeaBosque", email = "ideabosque@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "SilvaEngine-Utility",
    "SilvaEngine-DynamoDB-Base",
    "graphene",
    "openai",
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = []

[tool.pyright]
typeCheckingMode = "basic"
reportCallIssue = "none"
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportOptionalMemberAccess = "none"
reportIndexIssue = "none"
reportGeneralTypeIssues = "none"